--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
+    "autoprefixer": "^10.4.2",
     "git-cz": "^4.8.0",
+    "postcss": "^8.4.8",
+    "tailwindcss": "^3.0.23",
     "typescript": "^4.5.4",
     "vite": "^2.8.0"
   }
