--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "private": true,
   "scripts": {
-    "build": "rollup -c",
+    "build": "esbuild src/index.ts --bundle --outdir=dest/",
     "server": "npx @ginpei/http",
-    "start": "concurrently -n 'WWW,TS ' -c 'white.bgGreen,white.bgBlue' 'npm run server' 'npm run build -- -w'"
+    "start": "concurrently -n 'WWW,TS ' -c 'white.bgGreen,white.bgBlue' 'npm run server' 'npm run build -- --watch'"
   },
   "devDependencies": {
     "@ginpei/http": "^1.0.1",
-    "@rollup/plugin-typescript": "^8.3.1",
     "concurrently": "^7.0.0",
+    "esbuild": "^0.14.27",
     "git-cz": "^4.8.0",
-    "rollup": "^2.70.1",
     "typescript": "^4.6.2"
   }
 }
