--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
     "esbuild": "^0.14.27",
     "git-cz": "^4.8.0",
     "typescript": "^4.6.2"
+  },
+  "dependencies": {
+    "@types/audiobuffer-to-wav": "^1.0.2",
+    "audiobuffer-to-wav": "^1.0.0"
   }
 }
