--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "allowJs": true,
     "forceConsistentCasingInFileNames": true,
     "outDir": "dest",
     "preserveWatchOutput": true,
